# keycycle

./: .gitignore  README.md  publish.ps1  publish.sh  repro_mixin.py  test_usage_gemini.db
.github/workflows/: ci.yml
keycycle/: pyproject.toml
keycycle/keycycle/: __init__.py  legacy_multi_provider_wrapper.py  multi_client_wrapper.py  multi_provider_wrapper.py  utils.py
keycycle/keycycle/adapters/: __init__.py  generic_adapter.py  openai_adapter.py
keycycle/keycycle/config/: __init__.py  constants.py  dataclasses.py  enums.py  log_config.py  openrouter_models.yaml
keycycle/keycycle/config/models/: openrouter_models.yaml
keycycle/keycycle/key_rotation/: __init__.py  rotating_mixin.py  rotation_manager.py
keycycle/keycycle/usage/: __init__.py  db_logic.py  usage_logger.py
keycycle/tests/: conftest.py  env_test.py  gemini_sqlite_test.py  health_test.py  key_manager_test.py  manual_sqlite_test.py  openai_client_test.py  openai_rotation_test.py  stress_test.py  test_api_key_pinning.py  test_api_key_retrieval.py  test_custom_key_limits.py  test_specific_key_retrieval.py  test_usage_concurrent.db  test_usage_gemini.db
