[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "keycycle"
version = "0.1.1"
authors = [
  { name="William Jin", email="jinwilliam.jin@gmail.com" },
]
description = "A thread-safe key rotation and rate limiting manager for API keys."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "python-dotenv",
    "sqlalchemy",
    "pymysql", 
    "rich",
]

[project.optional-dependencies]
openai = ["openai"]
agno = ["agno"]
all = ["openai", "agno"]

[tool.setuptools.packages.find]
where = ["."]  
include = ["keycycle*"]